--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header h1{
     justify-content:center;
     align-items:center;
     font-size:20px;
-    line: height 1.8em;
+    line-height: height 1.8em;
 }
 footer {
     background-color: #5A3941;
