fix: correct background-image path syntax

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header-inner{
 }
 
 header h1{
-    background-image: url(images/Jinmay\ logo.svg);
+    background-image: url(images/00_logo.svg);
     background-repeat:no-repeat;
     background-position: center;
     background-size: contain;
