--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header h1{
     background-color: antiquewhite;
     color:white;
     height:95vh;
-    background-image:url("images/Room2.png");
+    background-image:url("images/00_banner.png");
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
