--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
     align-items: center;
     height:80px;
     width: 100%;
-    background-color: #A2746B;
+    background-color: #1C2454;
     position: fixed;
     top:0;
     left:0;
