style: update .slogan background color to #1C2454

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ header h1{
 }
 
 .slogan {
-    background-color: #977482;
+    background-color: #1C2454;
     color:white;
     height:250px;
     display:flex;
