style: update footer background color to #206FBC

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header h1{
     line-height: height 1.8em;
 }
 footer {
-    background-color: #5A3941;
+    background-color: #206FBC;
     color:#9E9A94;
     height:60px;
     display:flex;
