style: update .info h2 color to #639CCC and adjust margin

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ footer {
 
 .info h2 {
   margin-bottom: 10px;
-  color: #A2746B; 
+  color: #639CCC; 
 }
 html { box-sizing: border-box; }
 *, *::before, *::after { box-sizing: inherit; }
