--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding-top:80px;
     font-family:"Noto Sans TC",sans-serif;
-    background-color: #F7E5DE;
+    background-color: #EBEDEF;
 }
 
 header{
