fix: unify background color for mobile and desktop

--- a/style.css
+++ b/style.css
@@ -781,6 +781,10 @@ main {
   body {
     justify-content: center;
     align-items: flex-start;
+    .container {
+     background-color: transparent;
+}
+
   }
 
   main {
