--- a/style.css
+++ b/style.css
@@ -1115,3 +1115,9 @@ header > *:first-child { margin-top: 0; }
   margin-left:-50vw; margin-right:-50vw;
   width:100vw; max-width:100vw;
 }
+.figure_1 img {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
